Fix alignment and spacing issues in Text element when using Markdown

--- a/web-frontend/modules/core/assets/scss/components/builder/elements/ab_components/ab_hr.scss
+++ b/web-frontend/modules/core/assets/scss/components/builder/elements/ab_components/ab_hr.scss
@@ -1,8 +1,4 @@
 .ab-hr {
   margin: 0;
   border-color: var(--page-background-color-contrast, black);
-
-  .markdown & {
-    margin-top: 1em;
-  }
 }
